# pastel

./: .gitattributes  .gitignore  COPYING  INSTALL  Makefile.am  README.md  animecoin.creator.user.20  animecoin.files  animecoin.includes  build.sh  configure.ac  libzcashconsensus.pc.in
.circleci/: DockerBuild.bat  Dockerfile  config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml
acutil/: build-debian-package.sh  build.sh  fetch-params.sh  make-release.py
build-aux/m4/: ax_boost_base.m4  ax_boost_unit_test_framework.m4  ax_cxx_compile_stdcxx.m4  ax_gcc_func_attribute.m4  pastel_find_bdb.m4
build-aux/vs2019/: PastelNetwork.sln
build-aux/vs2022/: PastelNetwork.sln
cnn_architectures/: SimNet.py  data_loader.py  ensemble.py  finetune_vgg16.py  main.py  vgg16.py
contrib/: README.md  pastel-cli.bash-completion  tidy_datadir.sh  zcash-cli.bash-completion  zcash-tx.bash-completion  zcashd.bash-completion
contrib/amqp/: amqp_sub.py
contrib/ci-workers/: README.md  grind.yml  unix.yml
contrib/debian/: animecoin.install  control  copyright  pastel.examples  pastel.install  pastel.manpages  postinst  postrm  preinst  prerm
contrib/devtools/: README.md  fix-copyright-headers.py  gen-manpages.sh  symbol-check.py
contrib/gitian-descriptors/: gitian-linux.yml
contrib/linearize/: linearize-data.py  linearize-hashes.py
contrib/seeds/: generate-seeds.py
contrib/spendfrom/: spendfrom.py
contrib/zmq/: zmq_sub.py
depends/: Makefile  Makefile.txt  config.site.in  funcs.mk  libevent.txt
depends/builders/: darwin.mk  default.mk  linux.mk
depends/hosts/: darwin.mk  default.mk  linux.mk  mingw32.mk  msvc.mk
doc/: amqp.md  authors.md  developer-notes.md  dnsseed-policy.md  files.md  hotfix-process.md  init.md  pastel-rpc.md  pasteld-help.md  payment-api.md  payment-disclosure.md  release-process.md  security-warnings.md  tor.md  translation_strings_policy.md  unit-tests.md  wallet-backup.md  zmq.md
doc/man/: Makefile.am  animecoin-cli.1  animecoin-tx.1  animecoind.1  pastel-cli.1  pastel-fetch-params.1  pastel-tx.1  pasteld.1
pcutil/: build-debian-package.sh  build.sh  fetch-params.sh  make-release.py  static_code_analysis.py
qa/pull-tester/: rpc-tests.sh  run-bitcoin-cli  run-bitcoind-for-test.sh.in  run-pastel-cli  run-pasteld-for-test.sh  run-pasteld-for-test.sh.in  tests-config.sh.in
qa/rpc-tests/: .gitignore  README.md  addressindex.py  bip65-cltv-p2p.py  bipdersig-p2p.py  blockchain.py  burntxindex.py  (+96 more)
src/: Makefile.am  Makefile.gtest.include  Makefile.test.include  Makefile.zcash.include  accept_to_mempool.cpp  accept_to_mempool.h  activemasternode.cpp  activemasternode.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  alertkeys.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  ascii85.cpp  ascii85.h  asyncrpcoperation.cpp  asyncrpcoperation.h  asyncrpcqueue.cpp  asyncrpcqueue.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockscanner.cpp  blockscanner.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chain_options.cpp  (+189 more)
src/nsfw/: CMakeLists.txt  ITaskScheduler.h  ImageChecker.cpp  ImageChecker.h  NSFWImageChecker.cpp  NSFWImageChecker.h  Readme.md
src/nsfw/network/: ITaskPublisher.h
src/nsfw/task/task/: FinishTask.h  ITask.h  NSFWImageTask.h  TaskHeader.h
src/nsfw/task/task_result/: AttemptsExhaustedResult.h  ITaskResult.h  InappropriateTaskResult.h
src/nsfw/util/: AsynchronousQueue.h  Types.h  testQueue.cpp
src/services/: .gitignore  CMakeLists.txt
src/services/common/: CMakeLists.txt  main.cpp
src/services/common/consts/: Enums.h
src/services/common/dispatcher/: ExecutorDispatcher.cpp  ExecutorDispatcher.h  TaskDispatcher.h
src/services/common/include/consts/: Enums.h
src/services/common/include/dispatcher/: ExecutorDispatcher.h  TaskDispatcher.h
src/services/common/include/network/connection/: Connection.h  ConnectionManager.h
src/services/common/include/network/protocol/: IProtocol.h  JSONProtocol.h
src/services/common/include/network/publisher/: BoostAsioTaskPublisher.h  ITaskPublisher.h
src/services/common/include/scheduler/: ITaskScheduler.h  SchedulerFactory.h
src/services/common/include/task/task/: ITask.h  TaskHeader.h
src/services/common/include/task/task/common_tasks/: FinishTask.h
src/services/common/include/task/task_result/: ITaskResult.h
src/services/common/include/task/task_result/common_task_results/: AttemptsExhaustedResult.h  InappropriateTaskResult.h
src/services/common/include/util/: AsynchronousQueue.h  Exceptions.h  Types.h  utilstrencodings.h
src/services/common/network/protocol/: IProtocol.h  JSONProtocol.h
src/services/common/network/publisher/: ITaskPublisher.h
src/services/common/scheduler/: ITaskScheduler.h  SchedulerFactory.h
src/services/common/src/dispatcher/: ExecutorDispatcher.cpp
src/services/common/src/network/connection/: Connection.cpp
src/services/common/src/util/: utilstrencodings.cpp
src/services/common/src/util/univalue/: univalue.cpp  univalue_read.cpp  univalue_write.cpp
src/services/common/task/task/: ITask.h  TaskHeader.h
src/services/common/task/task/common_tasks/: FinishTask.h
src/services/common/task/task_result/: ITaskResult.h
src/services/common/task/task_result/common_task_results/: AttemptsExhaustedResult.h  InappropriateTaskResult.h
src/services/common/util/: testQueue.cpp
src/services/common_test/: CMakeLists.txt  TestMain.cpp
src/services/common_test/dispatcher/: TestTaskDispatcher.cpp  TestTaskDispatcher.h.cpp
src/services/common_test/network/protocol/: TestJSONProtocol.cpp  test_JSONProtocol.cpp
src/services/common_test/network/publisher/: TestTaskPublisher.h  test_BoostAsioTaskPublisher.cpp  test_TestTaskPublisher.cpp
src/services/common_test/scheduler/: TestTaskScheduler.cpp  TestTaskScheduler.h  test_TestTaskScheduler.cpp
src/services/common_test/task/: TestInappropriateTask.h  TestTask.h  TestTaskWithAdditionalField.h
src/services/common_test/util/: test_AsynchronousQueue.cpp
(+851 files in other folders)
